# aiodynamodb

./: Cargo.toml  README.md
src/: env_config.rs  lib.rs
