[package]
name = "aiodynamodb"
version = "0.1.0"
edition = "2021"

[lib]
name = "aiodynamodb"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.14" }
